# famitracker-qt

./: CMakeLists.txt  README.md
cmake/modules/: FindJACK.cmake
src/: famitracker-qt.pro
src/sound/: alsa.cpp  jack.cpp  jack.hpp
